[gd_scene load_steps=10 format=3 uid="uid://c42iqqxqf55h4"]

[ext_resource type="Script" path="res://src/game/item/ItemDisplay.gd" id="1_v4u05"]
[ext_resource type="Script" path="res://src/game/item/ItemDrag.gd" id="2_oaetu"]
[ext_resource type="PackedScene" uid="uid://dvegk5s3xp5pp" path="res://src/util/textureloader/TextureLoader.tscn" id="3_h4hpw"]
[ext_resource type="Texture2D" uid="uid://cej042o468ur2" path="res://assets/ui/darkpixelrpg/bars/frame_0.png" id="4_8g2kg"]
[ext_resource type="Texture2D" uid="uid://b84a5b8mbxve" path="res://assets/ui/darkpixelrpg/bars/frame_2_273 × 348.png" id="5_sro1b"]
[ext_resource type="Texture2D" uid="uid://de5omd1f81gu4" path="res://assets/ui/darkpixelrpg/decors/line/decor_line_simple.png" id="7_xx2ct"]
[ext_resource type="Texture2D" uid="uid://dsph0p7do1e5b" path="res://assets/ui/darkpixelrpg/buttons/special/diamond_plain.png" id="8_5qraa"]
[ext_resource type="Texture2D" uid="uid://e3posa35vdg0" path="res://assets/ui/darkpixelrpg/buttons/special/button_diamond.png" id="9_it05g"]
[ext_resource type="Texture2D" uid="uid://br41hohn08a44" path="res://assets/ui/darkpixelrpg/icons/items/32_coin.png" id="10_ylkoh"]

[node name="ItemDisplay" type="Node2D"]
texture_filter = 1
script = ExtResource("1_v4u05")

[node name="Texture2D" type="TextureRect" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 160.0
stretch_mode = 5
script = ExtResource("2_oaetu")

[node name="Level" type="Label" parent="."]
offset_left = 16.0
offset_top = 120.0
offset_right = 56.0
offset_bottom = 160.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "60"
vertical_alignment = 2

[node name="Upgrade" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "+9"

[node name="Background_1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 176.0
mouse_filter = 2

[node name="Background_A" type="ColorRect" parent="Background_1"]
modulate = Color(1.4, 1.4, 1.4, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Background_B" type="ColorRect" parent="Background_1"]
modulate = Color(1.4, 1.4, 1.4, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Background_C" type="ColorRect" parent="Background_1"]
modulate = Color(1.4, 1.4, 1.4, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Background_D" type="ColorRect" parent="Background_1"]
modulate = Color(1.4, 1.4, 1.4, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Background_2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 176.0
mouse_filter = 2

[node name="Background_A" type="ColorRect" parent="Background_2"]
modulate = Color(1, 1.8, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.294118, 0, 1)

[node name="Background_B" type="ColorRect" parent="Background_2"]
modulate = Color(1, 1.8, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.294118, 0, 1)

[node name="Background_C" type="ColorRect" parent="Background_2"]
modulate = Color(1, 1.8, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.294118, 0, 1)

[node name="Background_D" type="ColorRect" parent="Background_2"]
modulate = Color(1, 1.8, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.294118, 0, 1)

[node name="Background_3" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 176.0
mouse_filter = 2

[node name="Background_A" type="ColorRect" parent="Background_3"]
modulate = Color(1, 1, 1.5, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.196078, 1, 1)

[node name="Background_B" type="ColorRect" parent="Background_3"]
modulate = Color(1, 1, 1.5, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.196078, 1, 1)

[node name="Background_C" type="ColorRect" parent="Background_3"]
modulate = Color(1, 1, 1.5, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.196078, 1, 1)

[node name="Background_D" type="ColorRect" parent="Background_3"]
modulate = Color(1, 1, 1.5, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.196078, 1, 1)

[node name="Background_4" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 176.0
mouse_filter = 2

[node name="Background_A" type="ColorRect" parent="Background_4"]
modulate = Color(1.3, 1, 1.3, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.588235, 0, 1, 1)

[node name="Background_B" type="ColorRect" parent="Background_4"]
modulate = Color(1.3, 1, 1.3, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.588235, 0, 1, 1)

[node name="Background_C" type="ColorRect" parent="Background_4"]
modulate = Color(1.3, 1, 1.3, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.588235, 0, 1, 1)

[node name="Background_D" type="ColorRect" parent="Background_4"]
modulate = Color(1.3, 1, 1.3, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.588235, 0, 1, 1)

[node name="Background_5" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 176.0
mouse_filter = 2

[node name="Background_A" type="ColorRect" parent="Background_5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.588235, 0, 1)

[node name="Background_B" type="ColorRect" parent="Background_5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.588235, 0, 1)

[node name="Background_C" type="ColorRect" parent="Background_5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.588235, 0, 1)

[node name="Background_D" type="ColorRect" parent="Background_5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.588235, 0, 1)

[node name="TextureLoader" parent="." instance=ExtResource("3_h4hpw")]

[node name="PopupPanel" type="Window" parent="."]
transparent_bg = true
size = Vector2i(917, 1091)
visible = false
borderless = true
popup_window = true

[node name="Popup" type="Control" parent="PopupPanel"]
texture_filter = 1
custom_minimum_size = Vector2(909, 1083)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.5
offset_top = -541.5
offset_right = 454.5
offset_bottom = 541.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="PopupPanel/Popup"]
custom_minimum_size = Vector2(909, 1083)
layout_mode = 0
offset_right = 606.0
offset_bottom = 722.0
texture = ExtResource("4_8g2kg")

[node name="Name" type="Label" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 56.0
offset_top = 48.0
offset_right = 848.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 35
text = "Sword of Noobs  +9"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RarityAndType" type="Label" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 112.0
offset_top = 176.0
offset_right = 488.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 25
text = "Common Sword"
vertical_alignment = 1

[node name="ItemFrame" type="NinePatchRect" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 512.0
offset_top = 176.0
offset_right = 800.0
offset_bottom = 542.0
texture = ExtResource("5_sro1b")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 18
patch_margin_bottom = 21

[node name="Item" type="TextureRect" parent="PopupPanel/Popup"]
texture_filter = 1
layout_mode = 0
offset_left = 536.0
offset_top = 216.0
offset_right = 1496.0
offset_bottom = 1368.0
scale = Vector2(0.25, 0.25)
stretch_mode = 5

[node name="PrimaryStats" type="Control" parent="PopupPanel/Popup"]
anchors_preset = 0
offset_left = 112.0
offset_top = 216.0
offset_right = 488.0
offset_bottom = 544.0

[node name="PrimaryStatFirst" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_top = 20.0
offset_right = 292.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 100
text = "9999"
vertical_alignment = 2

[node name="PrimaryStatFirstDiff" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_left = 292.0
offset_top = 20.0
offset_right = 396.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 25
vertical_alignment = 2

[node name="PrimaryStatFirstType" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_top = 152.0
offset_right = 376.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_font_sizes/font_size = 25
text = "Damage "
vertical_alignment = 2

[node name="PrimaryStatSecond" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_top = 220.0
offset_right = 268.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 50
text = "5.0"
vertical_alignment = 2

[node name="PrimaryStatSecondDiff" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_left = 292.0
offset_top = 220.0
offset_right = 396.0
offset_bottom = 292.0
theme_override_font_sizes/font_size = 25
vertical_alignment = 2

[node name="PrimaryStatSecondType" type="Label" parent="PopupPanel/Popup/PrimaryStats"]
layout_mode = 0
offset_top = 288.0
offset_right = 376.0
offset_bottom = 328.0
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_font_sizes/font_size = 25
text = "Attacks per Second"
vertical_alignment = 2

[node name="DecorUpper" type="TextureRect" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 112.0
offset_top = 568.0
offset_right = 808.0
offset_bottom = 592.0
texture = ExtResource("7_xx2ct")
stretch_mode = 5

[node name="SecondaryStats" type="Control" parent="PopupPanel/Popup"]
anchors_preset = 0
offset_left = 112.0
offset_top = 568.0
offset_right = 800.0
offset_bottom = 736.0

[node name="Bullets" type="VBoxContainer" parent="PopupPanel/Popup/SecondaryStats"]
layout_mode = 0
offset_top = 24.0
offset_right = 35.0
offset_bottom = 176.0
theme_override_constants/separation = 20

[node name="Bullet1" type="TextureRect" parent="PopupPanel/Popup/SecondaryStats/Bullets"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("8_5qraa")
stretch_mode = 5

[node name="Bullet2" type="TextureRect" parent="PopupPanel/Popup/SecondaryStats/Bullets"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("8_5qraa")
stretch_mode = 5

[node name="Bullet3" type="TextureRect" parent="PopupPanel/Popup/SecondaryStats/Bullets"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("8_5qraa")
stretch_mode = 5

[node name="Stats" type="VBoxContainer" parent="PopupPanel/Popup/SecondaryStats"]
layout_mode = 0
offset_left = 56.0
offset_top = 24.0
offset_right = 464.0
offset_bottom = 176.0
theme_override_constants/separation = 15

[node name="SecondaryStatFirst" type="Label" parent="PopupPanel/Popup/SecondaryStats/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="SecondaryStatSecond" type="Label" parent="PopupPanel/Popup/SecondaryStats/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="SecondaryStatThird" type="Label" parent="PopupPanel/Popup/SecondaryStats/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="DecorLower" type="TextureRect" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 104.0
offset_top = 760.0
offset_right = 800.0
offset_bottom = 784.0
texture = ExtResource("7_xx2ct")
stretch_mode = 5

[node name="Sockets" type="VBoxContainer" parent="PopupPanel/Popup"]
layout_mode = 0
offset_left = 112.0
offset_top = 784.0
offset_right = 162.0
offset_bottom = 928.0
theme_override_constants/separation = 8

[node name="Socket1" type="TextureRect" parent="PopupPanel/Popup/Sockets"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("9_it05g")
stretch_mode = 5

[node name="Socket2" type="TextureRect" parent="PopupPanel/Popup/Sockets"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("9_it05g")
stretch_mode = 5

[node name="Footer" type="Control" parent="PopupPanel/Popup"]
anchors_preset = 0
offset_left = 88.0
offset_top = 936.0
offset_right = 816.0
offset_bottom = 992.0

[node name="Level" type="Label" parent="PopupPanel/Popup/Footer"]
layout_mode = 0
offset_left = 552.0
offset_top = -4.0
offset_right = 712.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 25
text = "Level 42"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PopupPanel/Popup/Footer"]
layout_mode = 0
offset_left = 16.0
offset_right = 56.0
offset_bottom = 40.0
texture = ExtResource("10_ylkoh")
stretch_mode = 5

[node name="Value" type="Label" parent="PopupPanel/Popup/Footer"]
layout_mode = 0
offset_left = 56.0
offset_top = -4.0
offset_right = 278.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 25
text = "6.514"
vertical_alignment = 1

[node name="Tier" type="Label" parent="PopupPanel/Popup/Footer"]
layout_mode = 0
offset_left = 420.0
offset_top = -4.0
offset_right = 548.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 25
text = "Lorem"

[connection signal="gui_input" from="Texture2D" to="." method="_on_texture_2d_gui_input"]
[connection signal="focus_exited" from="PopupPanel" to="." method="_on_popup_panel_focus_exited"]
